<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstagramViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="popular_photos">Popular Photos</string>
    <string name="captionDefaultText">This is a default Caption</string>
    <string name="user_name">Default User Name</string>
    <string name="user_image">User Image</string>
    <string name="content_image">Photo</string>
    <string name="likes_string">likes</string>
    <string name="like_string">1 like</string>
</resources>
