<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fffff8c9">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_toEndOf="@+id/ivUserimage"
        android:layout_alignLeft="@+id/tvCaption"
        android:layout_alignStart="@+id/tvCaption"
        android:id="@+id/lUser"
        android:background="#ffd0e8de"
        android:layout_margin="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivUserimage"
            android:layout_margin="5dp"
            android:maxWidth="60dp"
            android:maxHeight="60dp"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/user_image" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:id="@+id/tvUsername"
            android:ellipsize="end"
            android:maxLines="2"
            android:minLines="1"
            android:height="60dp"
            android:layout_marginLeft="10dp"
            android:textColor="#ff1f4873"
            android:textIsSelectable="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|left|top" />

    </LinearLayout>
    
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivContentImage"
        android:minHeight="80dp"
        android:minWidth="60dp"
        android:src="@drawable/ic_launcher"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_margin="5dp"
        android:background="#00fcfffd"
        android:layout_below="@+id/lUser"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/content_image"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like_string"
        android:id="@+id/tvLikes"
        android:layout_below="@+id/ivContentImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="5dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captionDefaultText"
        android:id="@+id/tvCaption"
        android:layout_below="@+id/tvLikes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp" />
</RelativeLayout>
